# ctigor

./: .gitignore  README.md  ctiagent.py  ctiagent_functions.py  ctigor_summarize.py  local_settings.py.example  main.tf  mcp_server.py  mcp_server_fruit.py  outputs.tf  provider.tf  pyproject.toml  requirements.txt  terraform.tfvars.example  test_chat.py  test_openai.py  variables.tf
