[project]
name = "ctigor"
version = "0.2.0"
description = "An Agentic AI Cyber Threat Intelligence (CTI) Analyst Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "autogen-agentchat[agents]>=0.4.9.3",
    "autogen-ext[azure,llama-cpp,ollama,semantic-kernel]>=0.4.9.3",
    "azure-identity>=1.21.0",
    "html2text>=2024.2.26",
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "semantic-kernel>=1.25.0",
    "typing>=3.10.0.0",
]
